change the h1 to p and h3 to span and change the style

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <!-- now the div in the center -->
             <div class="img-center">
                 <img src="london.jpg" alt="london" />
-                <h1>LONDON</h1>
+                <p>LONDON</p>
                 <div class="information">
                     <div>
-                        <h3>Country</h3>
-                        <h3>Englnd</h3>
+                        <span>Country</span>
+                        <span>Englnd</span>
                     </div>
                     <div>
-                        <h3>DISTRICTS</h3>
-                        <h3>32</h3>
+                        <span>DISTRICTS</span>
+                        <span>32</span>
                     </div>
                     <div>
-                        <h3>POPULATION</h3>
-                        <h3>8,538,689</h3>
+                        <span>POPULATION</span>
+                        <span>8,538,689</span>
                     </div>
 
                     <button class="btn-location"><i class="fa-solid fa-location-dot"></i>LOCATION</button>
